--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "workbench.colorCustomizations": {},
     "python.pythonPath": "jam\\Scripts\\python.exe",
-    "git.ignoreLimitWarning": true
+    "python.formatting.provider": "yapf"
 }
